# estate-opt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: README.md
crates/estate-opt-cli/: Cargo.toml
crates/estate-opt-cli/src/: main.rs
crates/estate-opt-core/: Cargo.toml
crates/estate-opt-core/src/: lib.rs
crates/estate-opt-scoring/: Cargo.toml
crates/estate-opt-scoring/src/: lib.rs
crates/estate-opt-solvers/: Cargo.toml
crates/estate-opt-solvers/src/: lib.rs
docs/: scoring-model.md
examples/: USAGE.md  sample_properties.csv
