[workspace]
members = [
  "crates/estate-opt-core",
  "crates/estate-opt-scoring",
  "crates/estate-opt-solvers",
  "crates/estate-opt-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Yabloko Labs"]
repository = "https://github.com/yablokolabs/estate-opt"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
csv = "1"
