[package]
name = "estate-opt-solvers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
rand.workspace = true
estate-opt-core = { path = "../estate-opt-core" }
estate-opt-scoring = { path = "../estate-opt-scoring" }
